<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProCycling</string>
    <string name="title_activity_logowanie">Login</string>
    <string name="action_markers_on">Włącz markery</string>
    <string name="action_markers_off">Wyłącz markery</string>
    <string name="action_settings">Ustawienia</string>
    <string name="text_mail">przyklad@gmail.com</string>
    <string name="text_password">hasło</string>
    <string name="button_login">zaloguj</string>
    <string name="text_or">lub</string>
    <string name="button_login_guest">Zaloguj jako gość</string>
    <string name="button_registration">Rejestracja</string>
    <string name="checkbox_remember">Zapamiętaj</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="signUp">Rejestracja</string>
    <string name="email">email</string>
    <string name="password">hasło</string>
    <string name="repeatPassword">powtórz hasło</string>
    <string name="userName">nazwa użytkownika</string>
    <string name="optional">Poniższe dane nie są wymagane</string>
    <string name="dateOfBirth">data urodzenia dd-mm-rrrr</string>
    <string name="sex">Płeć</string>
    <string name="female">Kobieta</string>
    <string name="male">Mężczyzna</string>
    <string name="city">Miasto</string>
    <string name="saveSignUp">Rejestruj</string>
    <string name="clear">Wyczyść</string>
    <string name="title_activity_maps">Map</string>

    <string name="drawer_open">Otwórz</string>
    <string name="drawer_close">Zamknij</string>
    <string name="menu">Menu</string>
    <string name="guest">Gość</string>
    <string name="place">Twoja nazwa</string>



    <string-array name="options">
        <item >Rejestruj trasę</item>
        <item >Moje trasy</item>
        <item >Mapa</item>
        <item >Statystyki</item>
        <item >Rankingi</item>
        <item >Wyloguj</item>
        <item >Zamknij</item>
    </string-array>
    <string-array name="options2">
        <item >Zakoncz rejestracje trasy</item>
        <item >Moje trasy</item>
        <item >Mapa</item>
        <item >Statystyki</item>
        <item >Rankingi</item>
        <item >Wyloguj</item>
        <item >Zamknij</item>
    </string-array>

    <string-array name="guest">
        <item >Rejestruj trasę</item>
        <item >Mapa</item>
        <item >Zaloguj</item>
        <item >Zamknij</item>
    </string-array>
    <string-array name="guest2">
        <item >Zakoncz rejestracje trasy</item>
        <item >Mapa</item>
        <item >Zaloguj</item>
        <item >Zamknij</item>
    </string-array>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="rejestruj_trase">Rozpoczecie rejestrowania trasy!</string>
    <string name="zakoncz_trase">Koniec rejestrowania trasy!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_charts">Wykresy</string>
    <string name="menu_options">Opcje</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="tv_markers">Markery na mapie</string>
    <string name="button_zapisz">Zapisz</string>
    <string name="button_exit">Wyjdź</string>
    <string name="speech">Interfejs głosowy</string>
    <string name="recognition_on">Włącz rozpoznawanie komend</string>
    <string name="recognition_off">Wyłącz rozpoznawanie komend</string>
    <string name="synthesis_on">Włącz wypowiedzi głosowe</string>
    <string name="synthesis_off">Wyłącz wypowiedzi głosowe</string>

</resources>