<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:text="@string/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="40dp"
                    android:id="@+id/tvRegister"    />

            </RelativeLayout>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="@dimen/abc_action_button_min_height_material"
                android:hint="@string/email"
                android:ems="10"
                android:id="@+id/etEmail" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/abc_action_button_min_height_material"
                android:editable="true"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/etPassword" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/abc_action_button_min_height_material"
                android:editable="true"
                android:hint="@string/repeatPassword"
                android:ems="10"
                android:id="@+id/etPasswordConfirm" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginTop="@dimen/abc_action_button_min_height_material"
                android:editable="true"
                android:hint="@string/userName"
                android:ems="10"
                android:id="@+id/etUserName" />


            <TextView
                android:text="@string/optional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:textSize="18sp"
                android:id="@+id/tvOptional"
                android:inputType="text" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Data urodzenia"
                    android:textSize="18dp"/>

                <Button
                    android:id="@+id/datePickerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="123"/>


                </LinearLayout>arLayout

            <TextView
                android:text="@string/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/abc_action_button_min_height_material"
                android:layout_marginLeft="5dp"
                android:textSize="18sp"
                android:id="@+id/tvSex"  />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:id="@+id/rgSex">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:id="@+id/female"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/male"
                    android:id="@+id/male"/>

            </RadioGroup>


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginTop="@dimen/abc_action_button_min_height_material"
                android:editable="true"
                android:hint="@string/city"
                android:ems="10"
                android:id="@+id/etCity" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/abc_action_button_min_height_material"
                android:layout_marginBottom="20dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/saveSignUp"
                    android:id="@+id/saveSignUp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:gravity="end"
                    android:text="@string/clear"
                    android:id="@+id/clear"/>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
